Fix: when navbar became fixed, the content jumped up -> added margin

--- a/public_html/scss/main.scss
+++ b/public_html/scss/main.scss
@@ -6,6 +6,7 @@
 body { padding-bottom: 20px; }
 .header { height: 280px; padding: 20px; }
 .temp-placehoder { height: 1000px; }
+.below-fixed-navbar { margin-top: 73px; }
 
 /* Navbar */
 .navbar-fixed {
